# rust-typeracer

./: .env  .gitconfig  .gitignore  BUGS.md  CONTRIBUTING.md  Cargo.toml  DOCS.md  IDEAS.md  ISSUES.md  Makefile  README.md  TODO.md  build.rs  config.mk  config.toml  log-from-loop.text  log-method.text  rust-typeracer.sublime-project  rust-typeracer.sublime-workspace
.cargo/: config.toml
.github/workflows/: PULL_REQUEST_TEMPLATE.md
.github/workflows/ISSUE_TEMPLATE/: 01_BUG.md  02_FEATURE_REQUEST.md  03_QUESTION.md  config.yml
benches/: criterion_example.rs  example.rs
changelog/: 0.0.1.md  0.0.2.md  CHANGELOG.md
codebase-design/: Cargo.toml
dev-ideas/: Cargo.toml  README.md
dev-ideas/examples/: README.md  app_state.rs  app_state_and_threads.rs  app_state_cannot_be_shared.rs  app_state_stopwatch_thread.rs  channels_method_music.rs  channels_method_music_and_stopwatch.rs  dbg_please.rs  e_ansi_parser.rs  enum_new_func.rs  events_bug.rs  music_with_crossbeam.rs  nbinput.rs  queue_stdout.rs  stopwatch_thread.rs  tlocal.rs  w.rs  wav_on_threads.rs
dev-ideas/src/: lib.rs  main.rs
examples/: c.rs  cross.rs  dbg_assert.rs  nbi2.rs  nbinput.rs  pan.rs  read_lines_from_stdin.rs  stdout.rs  threads.rs  u_poll.rs  w.rs  write_properly.rs
examples/music/: Cargo.toml
git-config/: ignore
githooks/: README.md  pre-commit.sample  pre-push.sample
github/: README.md
github/workflows/: continuous_integration.yaml  crates_io_publish.yaml  deploy_book.yaml  deploy_mdbook.yaml  vulnerabilities_audit.yaml
learning/: Cargo.toml
learning/src/: main.rs
src/: errors.rs  lib.rs  main.rs  statics.rs  typeracer.rs  utils.rs
src/config/: config.rs  errors.rs  getters.rs  mod.rs
src/highlighter/: highlighter.rs  mod.rs
src/music_player/: errors.rs  mod.rs  music_player.rs  music_state.rs
src/terminal_screen/: errors.rs  mod.rs  rectangle.rs  term_lines.rs  terminal_screen.rs
src/terminal_screen/builder/: builder.rs  errors.rs  mod.rs
src/typeracer/: app_state.rs  errors.rs  game_state.rs  mod.rs  stats.rs  typeracer.rs  ui.rs
static/: formula.txt  one-dark  unicode.txt
tests/: common.rs  mp_time.rs
todo/: DONE.md  IDEAS.md  IN-PROGRESS.md  PLANNED-FOR-FUTURE.md  README.md
typeracer-book/: book.toml
typeracer-book/src/: SUMMARY.md
typeracer-book/src/interesting-discoveries/: README.md  stopwatch-thread-mutex-problem.md
typeracer-proc-macro/: Cargo.toml
typeracer-proc-macro/examples/: simple.rs
typeracer-proc-macro/src/: internal.rs  lib.rs  stopwatch.rs
