[package]
name = "dev-ideas"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "td"
path = "src/bin/try_debug_draw_rectangle/main.rs"


[[bin]]
name = "mp"
path = "src/bin/try_music_player/main.rs"



# https://doc.rust-lang.org/nightly/cargo/reference/workspaces.html#the-dependencies-table
[dependencies]
crossterm = { workspace = true, optional = true }
# the main project's library for testing and creating new ideas
typeracer = { package = "tty-racer", path = "..", optional = true }

colored = { workspace = true, optional = true }
dotenv = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
crossbeam-channel = { version = "0.5.6", optional = true }
termion = { version = "1.5.6", optional = true }
pancurses = { version = "0.17.0", optional = true }
criterion = { version = "0.4.0", optional = true }
tokio = { version = "1.21.2", features = ["rt", "rt-multi-thread"], optional = true }
termion-input-tokio = { version = "0.3.0", optional = true }

soloud = { workspace = true, optional = true }
dbg-pls = { workspace = true, optional = true, features = ["pretty", "derive", "colors"] }


[features]
dev-ideas = [
    "soloud",
    "crossterm",
    # the main project's library for testing and creating new ideas
    "typeracer",
    "colored",
    "dotenv",
    "rand",
    "crossbeam-channel",
    "termion",
    "pancurses",
    "criterion",
    "tokio",
    "termion-input-tokio",
    "dbg-pls"
]

[[example]]
name = "chan"
path = "examples/channels_method_music.rs"
required-features = ["dev-ideas"]


[[example]]
name = "cm"
path = "examples/channels_method_music_and_stopwatch.rs"
required-features = ["dev-ideas"]


# a list with cool dependencies to try
#
# ansi_term = { version = "0.12.1", optional = true }
#crossterm = { version = "0.23.2", optional = true }
#
#clap = { version = "3.1.18", features = ["derive"], optional = true }
#
## core-dev = { path = "../../core-dev", features = [
##     "traits",
##     "datetime",
##     "icons",
## ], optional = true}
#
## serialization/deserialiation of different formats: JSON, YAML
#serde = { version = "1.0.137", features = ["derive"], optional = true }
#serde_json = { version = "1.0.81", optional = true }
#serde_yaml = { version = "0.8.24", optional = true }
#
#notify-rust = { version = "4.5.8", optional = true }
#notify = { version = "4.0.17", optional = true }
#
#color-backtrace = { version = "0.5.1", optional = true }
#
#unindent = { version = "0.1.9", optional = true }
#unicode-segmentation = { version = "1.9.0", optional = true }
#
#reqwest = { version = "0.11.10", features = ["blocking"], optional = true }
#ctrlc = { version = "3.2.2", features = ["termination"], optional = true }
#dirs = { version = "4.0.0", optional = true }
#toml = { version = "0.5.9", optional = true }
#image = { version = "0.24.2", optional = true }
#chrono = { version = "0.4.19", optional = true }
#soloud = { version = "1.0.2", optional = true }
#open = { version = "2.1.3", optional = true }
#time = { version = "0.3.9", features = ["parsing"], optional = true }
#pad = { version = "0.1.6", optional = true }
#snailquote = { version = "0.3.1", optional = true }
#termion = { version = "1.5.6", optional = true }
#terminal_size = { version = "0.1.17", optional = true }
#rand = { version = "0.8.5", optional = true }
#xdg-utils = { version = "0.4.0", optional = true }
#unescape = { version = "0.1.0", optional = true }
#syntect = { version = "5.0.0", optional = true }
#clipboard-ext = { version = "0.2.0", optional = true }
#lazy_static = { version = "1.4.0", optional = true }
#tz-rs = { version = "0.6.9", optional = true }
#tzdb = { version = "0.2.2", optional = true }
#string_template = { version = "0.2.1", optional = true }
#globwalk = { version = "0.8.1", optional = true }
#hex_color = { version = "1.0.0", optional = true }
#default-args = { version = "1.0.0", optional = true }
#duang = { version = "0.1.2", optional = true }
#fstrings = { version = "0.2.3", optional = true }
#rstest_reuse = { version = "0.3.0", optional = true }
#cute = { version = "0.3.0", optional = true }
#num-traits = { version = "0.2.15", optional = true }
