[package]
name = "typeracer-proc-macro"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

#syn = "1.0.103"
#quote = "1.0.21"
syn = { workspace = true, features = ["full"] }
quote = { workspace = true }
colored.workspace = true
chrono = "0.4.23"
colors-transform = "0.2.11"
strip-ansi-escapes = "0.1.1"
